k8s/istio-deployment/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
  labels: { app: app, version: v1}
spec:
  replicas: 1
  selector:
    matchLabels: { app: app, version: v1}
  template:
    metadata:
      labels: { app: app, version: v1}
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
    spec:
      containers:
        - name: app
          image: ghcr.io/remla23-team16/app:latest
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  labels: { app: app, version: v2}
spec:
  replicas: 1
  selector:
    matchLabels: { app: app, version: v2}
  template:
    metadata:
      labels: { app: app, version: v2}
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
    spec:
      containers:
        - name: app
          image: ghcr.io/remla23-team16/app:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  labels:
    app: app-svc
spec:
  selector:
    app: app
  ports:
    - port: 3000
      targetPort: 3000
