k8s/istio-deployment/istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-svc
spec:
  gateways:
    - my-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: app
            subset: v1
          weight: 90
        - destination:
            host: app
            subset: v2
          weight: 10

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: model-service-svc
spec:
  gateways:
    - my-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: model-service
            subset: v1
